test/positive/feature_charliterals.java

public class feature_charliterals {
  public feature_charliterals() {}
  protected char x = 'a';
}

