test/negative/LocalsWithSameName3.java
public class LocalsWithSameName3 {
    public LocalsWithSameName3() {
        int a = -1;
        for (int a = 0; a < 10; a=a+1) {

        }
    }
}
